k8s/prod-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-qep-backend
  labels:
    app.kubernetes.io/name: qep-backend
    app.kubernetes.io/part-of: qep
    app.kubernetes.io/environment: prod
