k8s/prod-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: #{APP_NAME}#
  namespace: prod-#{APP_NAME}#
  labels:
    app.kubernetes.io/name: #{APP_NAME}#
    app.kubernetes.io/part-of: qep
    app.kubernetes.io/environment: prod
spec:
  type: ClusterIP
  selector:
    app: #{APP_NAME}#
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
