k8s/prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qep-backend
  namespace: prod-qep-backend
  labels:
    app.kubernetes.io/name: qep-backend
    app.kubernetes.io/part-of: qep
    app.kubernetes.io/environment: prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "240"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "240"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "240"
    nginx.ingress.kubernetes.io/proxy-body-size: "150m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api-qep.qcode.co
      secretName: api-qep-qcode-co-tls
  rules:
    - host: api-qep.qcode.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qep-backend
                port:
                  name: http
